# Gossiper

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
