[package]
name = "gossiper"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["LJason <ljason@ljason.cn>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/LJason77/Gossiper"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
